CS59_Intellij/tests/invalid/notenclosed.dsl
/* invalid: content not enclosed with backticks */
Begin Template mail:
Dear {recipient (i)},
This is an email, personalized to you.
End Template.